[gd_scene load_steps=4 format=3 uid="uid://ecc23ubfsq6o"]

[ext_resource type="Script" uid="uid://45hw3phsum1y" path="res://scripts/minigames/sudden_death_minigame.gd" id="1"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1"]
size = Vector2(1200, 40)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2"]
size = Vector2(40, 600)

[node name="SuddenDeathMinigame" type="Node2D"]
script = ExtResource("1")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(600, 300)
zoom = Vector2(0.8, 0.8)

[node name="Arena" type="Node2D" parent="."]

[node name="Ground" type="StaticBody2D" parent="Arena"]
position = Vector2(600, 580)

[node name="GroundSprite" type="ColorRect" parent="Arena/Ground"]
offset_left = -600.0
offset_top = -20.0
offset_right = 600.0
offset_bottom = 20.0
color = Color(0.6, 0.4, 0.2, 1)
metadata/_edit_use_anchors_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Arena/Ground"]
shape = SubResource("RectangleShape2D_1")

[node name="LeftWall" type="StaticBody2D" parent="Arena"]
position = Vector2(20, 300)

[node name="WallSprite" type="ColorRect" parent="Arena/LeftWall"]
offset_left = -20.0
offset_top = -300.0
offset_right = 20.0
offset_bottom = 300.0
color = Color(0.7, 0.7, 0.7, 1)
metadata/_edit_use_anchors_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Arena/LeftWall"]
shape = SubResource("RectangleShape2D_2")

[node name="RightWall" type="StaticBody2D" parent="Arena"]
position = Vector2(1180, 300)

[node name="WallSprite" type="ColorRect" parent="Arena/RightWall"]
offset_left = -20.0
offset_top = -300.0
offset_right = 20.0
offset_bottom = 300.0
color = Color(0.7, 0.7, 0.7, 1)
metadata/_edit_use_anchors_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Arena/RightWall"]
shape = SubResource("RectangleShape2D_2")

[node name="Platform1" type="StaticBody2D" parent="Arena"]
position = Vector2(200, 450)

[node name="PlatformSprite" type="ColorRect" parent="Arena/Platform1"]
offset_left = -80.0
offset_top = -10.0
offset_right = 80.0
offset_bottom = 10.0
color = Color(0.2, 0.6, 0.8, 1)
metadata/_edit_use_anchors_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Arena/Platform1"]
scale = Vector2(0.133, 0.5)
shape = SubResource("RectangleShape2D_1")

[node name="Platform2" type="StaticBody2D" parent="Arena"]
position = Vector2(600, 350)

[node name="PlatformSprite" type="ColorRect" parent="Arena/Platform2"]
offset_left = -100.0
offset_top = -10.0
offset_right = 100.0
offset_bottom = 10.0
color = Color(0.2, 0.6, 0.8, 1)
metadata/_edit_use_anchors_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Arena/Platform2"]
scale = Vector2(0.167, 0.5)
shape = SubResource("RectangleShape2D_1")

[node name="Platform3" type="StaticBody2D" parent="Arena"]
position = Vector2(1000, 450)

[node name="PlatformSprite" type="ColorRect" parent="Arena/Platform3"]
offset_left = -80.0
offset_top = -10.0
offset_right = 80.0
offset_bottom = 10.0
color = Color(0.2, 0.6, 0.8, 1)
metadata/_edit_use_anchors_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Arena/Platform3"]
scale = Vector2(0.133, 0.5)
shape = SubResource("RectangleShape2D_1")

[node name="SpawnPoints" type="Node2D" parent="."]

[node name="SpawnPoint1" type="Marker2D" parent="SpawnPoints"]
position = Vector2(150, 500)

[node name="SpawnPoint2" type="Marker2D" parent="SpawnPoints"]
position = Vector2(450, 500)

[node name="SpawnPoint3" type="Marker2D" parent="SpawnPoints"]
position = Vector2(750, 500)

[node name="SpawnPoint4" type="Marker2D" parent="SpawnPoints"]
position = Vector2(1050, 500)

[node name="ItemSpawnPoints" type="Node2D" parent="."]

[node name="ItemSpawn1" type="Marker2D" parent="ItemSpawnPoints"]
position = Vector2(300, 400)

[node name="ItemSpawn2" type="Marker2D" parent="ItemSpawnPoints"]
position = Vector2(600, 300)

[node name="ItemSpawn3" type="Marker2D" parent="ItemSpawnPoints"]
position = Vector2(900, 400)

[node name="RespawnPoints" type="Node2D" parent="."]

[node name="RespawnPoint1" type="Marker2D" parent="RespawnPoints"]
position = Vector2(600, 250)

[node name="UIOverlay" type="CanvasLayer" parent="."]

[node name="PlayerStatus" type="Label" parent="UIOverlay"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -200.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 120.0
grow_horizontal = 0
text = "Players:"
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="GameTimer" type="Label" parent="UIOverlay"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -50.0
offset_top = 20.0
offset_right = 50.0
offset_bottom = 50.0
grow_horizontal = 2
text = "Time: 00:00"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="BackButton" type="Button" parent="UIOverlay"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -60.0
offset_right = 120.0
offset_bottom = -20.0
grow_vertical = 0
text = "Back to Map"
metadata/_edit_use_anchors_ = true
